--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Revision JS</title>
   <link rel="stylesheet" href="./assets/css/styles.css" media="screen" title="no title">
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
 
-<div id="check">La liste doit apparaître ici...lors du clic sur cette div...Vanilla JS ou Jquery possible pour l'événement click</div>
+<div id="check">La liste doit apparaître ici...lors du clic sur cette div...Vanilla JS ou Jquery possible pour l'événement click<span class="test"></span></div>
 
 <script src="./assets/js/app.js" charset="utf-8"></script>
 </body>
