exercice ajax terminé

--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
-
-<<<<<<< HEAD
 <div id="check">La liste doit apparaître ici...lors du clic sur cette div...Vanilla JS ou Jquery possible pour l'événement click<span class="test"></span></div>
-=======
-<div id="check">La liste doit apparaître ici...lors du clic sur cette div...Vanilla JS ou Jquery possible pour l'événement click</div>
+<button id="bouton">Mise à jour</button>
 <div id="resultatAjax"></div>
->>>>>>> 26697ae42279b3c40455189642c0752911625fed
-
 <script src="./assets/js/app.js" charset="utf-8"></script>
 </body>
 </html>
